hard-gists/11292725/run.log
=== Docker Run Log for 11292725 ===
Started at: Mi 29. Okt 11:54:50 CET 2025

[2025-10-29 11:54:51] START: Running container for 11292725
[2025-10-29 11:54:51] SUCCESS: Container d8266db88b25202453e5a2249838091ef96ab4bf0b64d3c61c7e273bd43e7f10 started for 11292725
=== Container logs for 11292725 ===
  File "/snippet.py", line 81
    print "Log location: %s" % os.path.join(logfolder, filename)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 11292725 ===
[2025-10-29 11:54:53] INFO: Container d8266db88b25202453e5a2249838091ef96ab4bf0b64d3c61c7e273bd43e7f10 has stopped
